k8/platform/garage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: garage
  ports:
    - name: s3-api
      port: 3900
      targetPort: s3-api
      protocol: TCP
    - name: web
      port: 3902
      targetPort: web
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: admin
      protocol: TCP
