k8/platform/garage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-s3
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`s3.development.cfapps.cool`)
      kind: Rule
      services:
        - name: garage
          port: 3900
  tls: {}
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: garage-admin
  namespace: garage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`garage.development.cfapps.cool`)
      kind: Rule
      services:
        - name: garage
          port: 3902
  tls: {}
